--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- side bar -->
     <section>
       <a href="">
-        <img src="" alt="" />
+        <img src="./images/logo barber.svg" alt="logo" />
       </a>
       <!-- Contacts bar -->
       <div>
@@ -28,7 +28,7 @@
           </li>
         </ul>
       </div>
-      <img src="" alt="" />
+      <img src="images/divider-.svg" alt="-" />
     </section>
     <!-- Contacts info side bar -->
     <section></section>
@@ -50,7 +50,7 @@
       <!-- Title section -->
       <section>
         <div>
-          <img src="" alt="" />
+          <img src="images/divider.svg" alt="-" />
           <h3>A hair salon for men in Kyiv</h3>
         </div>
         <h1>BarberShop</h1>
@@ -66,5 +66,23 @@
       </div>
     </div>
    </section> 
+   <!-- About section -->
+   <section>
+    <div>
+      <img src="images/shaving.jpg" alt="shaving">
+      <img src="images/cuttinghair.jpg" alt="cut hair">
+    </div>
+    <!-- About content -->
+    <div>
+      <div>
+      <img src="images/divider-.svg" alt="-">
+      <h3>About</h3>
+      </div>
+      <h1>The Best Barbershop in Your City</h1>
+      <p>If you want to add more confidence to your image, you are definitely in the right place.</p>
+      <p>We are a team that never rests on its laurels and yearns for change. And once you fall into the hands of our master, you will never be the same again. We are a team that is always on the same wavelength with clients. Therefore, we are always ready to improve everyone who comes to us!</p>
+      <button type="button">book a service</button>
+    </div>
+   </section>
   </body>
 </html>
